[metadata]
name = itseasy_pyutil
version = file: itseasy_pyutil/VERSION
description = Itseasy Python utility library
author = Wiryono Lauw
license = MIT

[options]
python_requires = >=3.11
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    argon2-cffi
    aiomysql
    pyjwt
    pymysql
    python-dateutil
    sqlalchemy
    alembic
    asyncpg
    psycopg2-binary
    

[options.package_data]
itseasy_pyutil = VERSION
